--- a/style.css
+++ b/style.css
@@ -1,17 +1,15 @@
-/* Обновленные стили для увеличения интерфейса */
 .bio-container {
     display: flex;
     align-items: center;
     justify-content: center;
     background: linear-gradient(#ffecd2, #fcb69f);
-    padding: 40px; /* Увеличиваем внутренний отступ */
+    padding: 20px;
     border-radius: 10px;
     height: 100vh;
 }
-
 .avatar-container {
-    width: 200px; /* Увеличиваем размер аватара */
-    height: 200px;
+    width: 150px;
+    height: 150px;
     overflow: hidden;
     border-radius: 50%;
 }
@@ -29,20 +27,21 @@
 }
 
 .bio-details h2 {
-    font-size: 28px; /* Увеличиваем размер заголовка */
+    font-size: 24px;
     margin-bottom: 10px;
 }
 
 .bio-details p {
-    font-size: 18px; /* Увеличиваем размер текста */
+    font-size: 16px;
     margin-bottom: 20px;
 }
 
 .buttons {
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 30px; /* Увеличиваем отступ между кнопками и другими элементами */
+    flex-direction: column; /* Расположение по вертикали */
+    align-items: center; /* Выравнивание по центру */
+    justify-content: center; /* Выравнивание по центру */
+    margin-top: 20px;
 }
 
 .button, .random-color-button {
@@ -50,10 +49,10 @@
     color: #fff;
     border: none;
     border-radius: 30px;
-    padding: 20px 40px; /* Увеличиваем отступы кнопок */
-    margin: 10px 0; /* Увеличиваем отступы между кнопками */
+    padding: 15px 30px;
+    margin: 10px 0; /* Отступы между кнопками */
     text-decoration: none;
-    font-size: 18px; /* Увеличиваем размер шрифта */
+    font-size: 16px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -61,3 +60,4 @@
 .button:hover, .random-color-button:hover {
     background-color: #ff4f4f;
 }
+
