--- a/style.css
+++ b/style.css
@@ -1,13 +1,18 @@
 .bio-container {
     display: flex;
-    align-items: center;
     justify-content: center;
-    background: linear-gradient(#ffecd2, #fcb69f);
-    padding: 20px;
+    background: linear-gradient(#a24e7f, #ad6331);
+    padding: 200px;
     border-radius: 10px;
     height: 100vh;
 }
 
+.bio-container img {
+    width: 70px;
+    height: 70px;
+    overflow: hidden;
+    border-radius: 20%;
+}
 
 .avatar-container img {
     width: 100%;
